<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen"
    android:background="#ffdbf5ff"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/mainscreen_friend_button"
        android:id="@+id/mainscreen_friend_button"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textViewMain"
        android:layout_alignStart="@+id/textViewMain"
        android:layout_alignEnd="@+id/textViewMain" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/add_item_title"
        android:id="@+id/mainscreen_add_item_button"
        android:onClick="addItem"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/mainscreen_items_button"
        android:layout_alignStart="@+id/mainscreen_items_button"
        android:layout_alignEnd="@+id/mainscreen_items_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/items_button"
        android:id="@+id/mainscreen_items_button"
        android:onClick="items"
        android:layout_below="@+id/mainscreen_friend_button"
        android:layout_marginTop="70dp"
        android:layout_alignStart="@+id/mainscreen_friend_button"
        android:layout_alignEnd="@+id/mainscreen_friend_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/mainscreen_logout_button"
        android:onClick="logout"/>
</RelativeLayout>