<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registration"
    android:background="#ffdbf5ff"
    android:elevation="200px"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/Registration"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="50dp"
        android:text="@string/name_view"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_toEndOf="@+id/textViewName"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewName"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewEmail"
        android:layout_marginStart="38dp"
        android:layout_toEndOf="@+id/textViewEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEmail"
        android:layout_below="@+id/textViewEmail"
        android:layout_marginTop="38dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewUser"
        android:layout_toEndOf="@+id/textViewUser"
        android:ems="10"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEmail"
        android:layout_below="@+id/textViewUser"
        android:layout_marginTop="38dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewPW"
        android:layout_toEndOf="@+id/textViewPW"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewPW2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEmail"
        android:layout_below="@+id/textViewPW"
        android:layout_marginTop="38dp"
        android:text="@string/password2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextPW2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewPW2"
        android:layout_toEndOf="@+id/textViewPW2"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonRegister"
        android:background="@drawable/green_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/Register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:background="@drawable/grey_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
