<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FriendDetail"
    android:background="#ffffffff"
    android:elevation="200px"
    tools:ignore="Overdraw,PxUsage,UnusedAttribute">

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/name_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textViewName"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_marginStart="20dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewName"
        android:layout_below="@+id/textViewName"
        android:layout_marginTop="38dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textViewEmail"
        android:layout_alignBottom="@+id/textViewEmail"
        android:layout_marginStart="20dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewName"
        android:layout_below="@+id/textViewEmail"
        android:layout_marginTop="38dp"
        android:text="@string/rating_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />
<!--
    <TextView
        android:id="@+id/textViewRatingInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewRating"
        android:layout_alignBottom="@+id/textViewRating"
        android:layout_marginLeft="20dp"
        android:text="rating"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
-->
    <TextView
        android:id="@+id/textViewNumberOfSales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewName"
        android:layout_below="@+id/textViewRating"
        android:layout_marginTop="38dp"
        android:text="@string/number_of_sales"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewNumberOfSalesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textViewNumberOfSales"
        android:layout_alignBottom="@+id/textViewNumberOfSales"
        android:layout_marginStart="20dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:background="@drawable/red_btn"
        android:id="@+id/buttonRemoveFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="removeFriend"
        android:text="@string/remove_friend_title"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:background="@drawable/green_btn"
        android:id="@+id/buttonViewItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewItems"
        android:text="@string/view_item_title"
        android:layout_above="@+id/buttonRemoveFriend"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:background="@drawable/grey_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_page_back"
        android:id="@+id/buttonBack"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="back"
        tools:ignore="RelativeOverlap" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_alignTop="@+id/textViewRating"
        android:layout_toEndOf="@+id/textViewNumberOfSales" />

</RelativeLayout>