<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs2340.shoppingwithfriends.activies.AddFriend"
    android:background="#ffffffff"
    android:elevation="200px"
    tools:ignore="Overdraw,PxUsage,UnusedAttribute">


    <TextView
        android:id="@+id/AddFriendTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/add_friend_username"
        android:layout_below="@+id/AddFriendTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_friend_input_title"
        android:id="@+id/add_friend_username_title"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/add_friend_email"
        android:layout_alignStart="@+id/add_friend_username"
        android:layout_marginBottom="95dp"
        android:layout_below="@+id/add_friend_email_title"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_friend_email_title"
        android:id="@+id/add_friend_email_title"
        android:layout_marginTop="250dp"

        android:layout_centerHorizontal="true"

        />

    <Button
        android:background="@drawable/green_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend_button"
        android:id="@+id/add_friend_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="addFriend"
        />

    <Button
        android:background="@drawable/grey_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_page_back"
        android:id="@+id/button2"
        android:layout_alignParentTop="true"
        android:onClick="back"
        android:layout_alignParentStart="true" />
</RelativeLayout>
