<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs2340.shoppingwithfriends.activies.SendDeal"
    android:background="#ffdbf5ff"
    tools:ignore="Overdraw">


    <TextView
        android:id="@+id/SendDealTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_deal_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/add_price"
        android:layout_below="@+id/SendDealTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/price_view"
        android:id="@+id/price_textview"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/add_item_price"
        android:inputType="numberDecimal"
        android:layout_below="@+id/send_location"
        android:layout_alignStart="@+id/add_price"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_view"
        android:id="@+id/send_location"
        android:layout_marginTop="250dp"

        android:layout_centerHorizontal="true"

        />

    <Button
        android:background="@drawable/green_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_deal_title"
        android:id="@+id/send_deal_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="sendDeal"
        />
</RelativeLayout>
